--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,18 +10,22 @@ jobs:
         with:
           python-version: '2.7'
           architecture: 'x64'
-      - run: mkdir build && (cd build && cmake -DCODE_COVERAGE=ON .. && make && make codecoverage)
+      - name: Build
+        run: mkdir build && (cd build && cmake -DCODE_COVERAGE=ON .. && make
+      - name: Coverage
+        run: (cd build && make codecoverage)
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: 'build/codecoverage.info'
-  macos-10_15:
-    runs-on: macos-10.15
+  macos-11:
+    runs-on: macos-11
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
           python-version: '2.7'
           architecture: 'x64'
-      - run: mkdir build && (cd build && cmake .. && make)
+      - name: Build
+        run: mkdir build && (cd build && cmake .. && make)
