--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
           python-version: '2.7'
           architecture: 'x64'
       - name: Build
-        run: mkdir build && (cd build && cmake -DCODE_COVERAGE=ON .. && make
+        run: mkdir build && (cd build && cmake -DCODE_COVERAGE=ON .. && make)
       - name: Coverage
         run: (cd build && make codecoverage)
       - name: Coveralls
