--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: test
+name: Tests
 on: [push]
 jobs:
   ubuntu-18_04:
@@ -19,13 +19,3 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: 'build/codecoverage.info'
-  macos-11:
-    runs-on: macos-11
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '2.7'
-          architecture: 'x64'
-      - name: Build
-        run: mkdir build && (cd build && cmake .. && make)
